# CharmCutCode

./: .gitmodules  CMakeLists.txt  README.md  setup.sh
CharmCutCode/: CMakeLists.txt
CharmCutCode/CharmCutCode/: AnalysisBase.h  AnalysisSelfCouplingTest.h  AnalysisZHAllHad.h  AnalysisZHvvJJ.h  HistContainer.h  MetadataContainer.h  TreeContainer.h
CharmCutCode/Root/: AnalysisBase.cxx  AnalysisSelfCouplingTest.cxx  AnalysisZHAllHad.cxx  AnalysisZHAllHad_vec.cxx  AnalysisZHvvJJ.cxx  HistContainer.cxx  MetadataContainer.cxx  TreeContainer.cxx
CharmCutCode/data/: FCCee_procDict_winter2023_IDEA.json  SumOfWeightsCustom.json  s_score_baseline_CLD.root
CharmCutCode/submission/: jobSubmitter.py  submit.py
CharmCutCode/utils/: runAnalysis.cxx
PostCutCode/: CMakeLists.txt
PostCutCode/PostCutCode/: AnalysisBase.h  AnalysisSelfCouplingTest.h  AnalysisZHAllHad.h  AnalysisZHAllHad6J.h  AnalysisZHvvJJ.h  HistContainer.h  MetadataContainer.h  TreeContainer.h
PostCutCode/Root/: AnalysisBase.cxx  AnalysisSelfCouplingTest.cxx  AnalysisZHAllHad.cxx  AnalysisZHAllHad6J.cxx  AnalysisZHvvJJ.cxx  HistContainer.cxx  MetadataContainer.cxx  TreeContainer.cxx
PostCutCode/data/: AllHistograms.root  FCCee_procDict_winter2023_IDEA.json  SoWcustom_ZHall.json
PostCutCode/submission/: submit.py
PostCutCode/utils/: runAnalysis.cxx
WSMaker/: CMakeLists.txt
WSMaker/Root/: CategoryContainer.cxx  WSMaker.cxx
WSMaker/WSMaker/: CategoryContainer.h  CommonCode.h  WSMaker.h
WSMaker/data/: HistFactorySchema.dtd  SelfCouplingTestConfig.json  ZHAllHadConfig.json  ZHAllHad_SplitSS.json  ZHAllHad_fine.json  ZHvvJJConfig.json  simple.json
WSMaker/utils/: makeWS.cxx
wscanner/: .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh  setup_HCombRoot.sh
wscanner/Root/: InterpolatedGraph.cxx  commonCode.cxx  computeCompatibility.cxx  rankNP.cxx  runToys.cxx  scan1D.cxx  scan1DToys.cxx  scan2D.cxx  scan2DToys.cxx  scanBase.cxx  scanDatasets.cxx  scanMinosError.cxx  scanPulls.cxx
wscanner/Root/atlasstyle/: AtlasLabels.C  AtlasLabels.h
wscanner/WScanner/: InterpolatedGraph.h  commonCode.h  computeCompatibility.h  log.h  rankNP.h  runToys.h  scan1D.h  scan1DToys.h  scan2D.h  scan2DToys.h  scanBase.h  scanDatasets.h  scanMinosError.h  scanPulls.h
wscanner/data/: defaultConfig.txt
wscanner/data/FCC/: ZHAllHad.txt  ZvvH.txt
wscanner/data/H4l/H4lCP/: H4lCPScanConfigFloat.txt  allAxesConfig.txt  allAxesConfig_cHBtil.txt  allAxesConfig_cHBtil_cHWBtil_cHWtil_float.txt  allAxesConfig_cHBtil_cHWBtil_float_qqZZ.txt  allAxesConfig_cHBtil_float_qqZZ.txt  allAxesConfig_cHBtil_float_qqZZ_ggF.txt  allAxesConfig_cHWBtil.txt  allAxesConfig_cHWBtil_float_qqZZ.txt  allAxesConfig_cHWBtil_float_qqZZ_ggF.txt  allAxesConfig_cHWtil.txt  allAxesConfig_cHWtil_cHBtil_float_qqZZ.txt  allAxesConfig_cHWtil_cHWBtil.txt  allAxesConfig_cHWtil_cHWBtil_float_qqZZ.txt  allAxesConfig_cHWtil_float_qqZZ.txt  allAxesConfig_cHWtil_float_qqZZ_ggF.txt  allAxesConfig_dTilde.txt  allAxesConfig_dTilde_float_qqZZ.txt  allAxesConfig_float_cHBtil_fix_cHWtil_float_cHWBtil.txt  allAxesConfig_float_cHBtil_float_cHWtil_fix_cHWBtil.txt  allAxesConfig_float_cHBtil_float_cHWtil_float_cHWBtil.txt  allAxesConfig_float_tCza_fixed_tCzz.txt  allAxesConfig_float_tCza_fixed_tCzz_float_qqZZ.txt  allAxesConfig_float_tCza_fixed_tCzz_float_qqZZ_ggF.txt  allAxesConfig_float_tCzz_fixed_tCza.txt  allAxesConfig_float_tCzz_fixed_tCza_float_qqZZ.txt  allAxesConfig_float_tCzz_fixed_tCza_float_qqZZ_ggF.txt  allAxesConfig_tCzz_tCza.txt  cHBtilConfig.txt  cHWBtilConfig.txt  cHWtilConfig.txt  tCaaConfig.txt  tCzaConfig.txt  tCzzConfig.txt
wscanner/data/H4l/H4lCoup/: XSConfig.txt  muConfig.txt
wscanner/data/H4l/H4lDiff/: H4lDiffConfig.txt
wscanner/data/HComb/HighpTInterpV1/: CombConfig_3D.txt  H4lConfig_3D.txt  H4lConfig_cpG1D.txt  H4lConfig_ctG1D.txt  H4lConfig_ctp1D.txt  HggConfig_3D.txt
wscanner/data/HComb/diffXSV1/: CombConfig.txt  H4lConfig.txt  HggConfig.txt
wscanner/data/HComb/v2/: combination5XS_Strag0.txt  combination5XS_Strag0_VBF.txt  combination5XS_Strag0_VH.txt  combination5XS_Strag0_WH.txt  combination5XS_Strag0_ZH.txt  combination5XS_Strag0_ttH.txt  combination5XS_Strag1.txt  combination5XS_asimov_Strag0.txt  combination5XS_asimov_Strag1.txt  combination5XS_consPrun_Strag0.txt  combination5XS_consPrun_Strag1.txt  combination5XS_consPrun_asimov_Strag0.txt  combination5XS_consPrun_asimov_Strag1.txt  combination5ratio_Strag0.txt  combination5ratio_Strag1.txt  combination5ratio_consPrun_Strag0.txt  combination5ratio_consPrun_Strag1.txt  combination5x5XS_Strag0.txt  combination5x5XS_Strag1.txt  combination5x5XS_consPrun_Strag0.txt  combination5x5XS_consPrun_Strag1.txt
wscanner/data/HComb/v3/: combination4XS_uncond.txt  combination5XS_asimovPruned.txt  combination5XS_asimovPruned_S0.txt  combination5XS_dataPruned.txt  combination5XS_dataPruned_S0.txt  combination5XS_uncond.txt  combination5ratio_uncond.txt  combinationProdBr_uncond.txt
wscanner/data/PlotConfig/: FCCZHAllHad.json  FCCZvhjj.json  H4lCoup.json
wscanner/scripts/: buildList.py  gridRun.sh  jobListCP.py  jobListCouplings.py  jobListDiff.py  jobListExample.py  jobListFCC.py  jobListFCC_ZHAllHad.py  jobListTesting.py  jobManager.py  jobSubmission.py  mergeDatasetScans.py  plotOverlay.sh  plotScans.py  submitScan.py  unTarDatasets.py
wscanner/utils/: plot1D.cxx  plot2D.cxx  plot2DToys.cxx  plotCorrHist.cxx  plotPulls.cxx  plotRanking.cxx  plotToys.cxx  runScan.cxx
